<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_person_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marshall.zbieracz_danych.AddPersonDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextSurname"
                android:hint="@string/hint_surname"
                android:layout_below="@+id/editTextName"
                android:layout_alignStart="@+id/editTextName"
                android:layout_marginTop="28dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginTop="59dp"
                android:id="@+id/editTextName"
                android:hint="@string/hint_first_name"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/pick_date_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPickDate"
                android:layout_below="@+id/editTextSurname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:onClick="pickBirthdayDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewBirthday"
                android:layout_marginTop="13dp"
                android:layout_below="@+id/buttonPickDate"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonExit"
                android:onClick="clickExit"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/buttonPickDate" />

            <Button
                android:text="@string/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNext"
                android:onClick="toPhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
