<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_language_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marshall.zbieracz_danych.LanguageChangeActivity">

    <Button
        android:text="@string/button_language_change_activity_polish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/buttonPolish"
        android:onClick="clickChangeLanguageToPolish" />

    <Button
        android:text="@string/button_language_change_activity_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonBackToMainActivity"
        android:onClick="backToMainActivity" />

    <Button
        android:text="@string/button_language_change_activity_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPolish"
        android:layout_alignEnd="@+id/buttonPolish"
        android:layout_marginTop="41dp"
        android:id="@+id/buttonEnglish"
        android:onClick="clickChangeLanguageToEnglish" />

</RelativeLayout>
