<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_person_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.marshall.zbieracz_danych.AddPersonPhotoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button
                android:text="@string/button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonExit"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:onClick="clickExit" />

            <Button
                android:text="@string/button_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp"
                android:id="@+id/buttonTakePhoto"
                android:onClick="takePhoto" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/imageViewPhoto"
                android:scaleType="center"
                android:layout_below="@+id/buttonTakePhoto"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonNextSummary"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:onClick="toSummery" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
